Fix for Bar/Pie chart not showing updated data...

--- a/src/d3.css
+++ b/src/d3.css
@@ -21,6 +21,7 @@
   background-color: rgba(255,255,255,1);
   padding: 10px;
   border: 1px solid #ddd;
+  z-index: 10000;
 
   font-family: Arial;
   font-size: 13px;
